# integral

./: Integral.hs  integral.cabal
src/: Integral.hs  Main.hs
