name:           integral
version:        0.1
cabal-version:  >=1.2
build-type:     Custom
author:         marcos
data-files:     
                src/Integral.hs, 
                src/Main.hs

executable integral
  hs-source-dirs:  src
  build-depends:   base >= 4
  ghc-options:     -fno-warn-name-shadowing
  extensions:      DeriveDataTypeable
  main-is:         Integral.hs

library 
  build-depends:   base >= 4
  hs-source-dirs:  src
  ghc-options:     -Wall
  extensions:      DeriveDataTypeable

